<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:text="@string/txtnombre"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtnombre"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtplaza"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="452dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtmat"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="376dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtapell"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="228dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edttlfn"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="304dp"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtplaza"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txttlfn"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtmatricula"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtapell"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butsaveregis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <Switch
        android:id="@+id/swtdis"
        android:layout_width="217dp"
        android:layout_height="77dp"
        android:layout_marginBottom="140dp"
        android:text="@string/swtichdisca"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>