<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="248dp"
        android:gravity="center"
        android:text="@string/txtuser"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="121dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/txtpass"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/edtpass"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtuser" />

    <EditText
        android:id="@+id/edtuser"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butregis"
        android:layout_width="167dp"
        android:layout_height="80dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="168dp"
        android:backgroundTint="#683B9134"
        android:text="@string/butregistro"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>