<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_menubackground">

    <Button
        android:id="@+id/butcontext"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:drawable/ic_dialog_dialer"
        android:backgroundTint="#31609A"
        app:backgroundTint="#31609A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butentrada"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="ENTRADA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/butbarrera"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="20dp"
        android:text="BARRERA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/butbloq"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:text="BLOQUEAR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/butinfo"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="80dp"
        android:text="INFO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="528dp" />

    <TextView
        android:id="@+id/txtmatricula"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="152dp"
        android:background="#C8ACAC"
        android:backgroundTint="#885686E6"
        android:gravity="center"
        android:text="@string/txtmatricula"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRmat"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="152dp"
        android:background="#C8ACAC"
        android:backgroundTint="#885686E6"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/swtRdisc"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:background="#885686E6"
        android:text="@string/swtichdisca"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmatricula" />

    <Switch
        android:id="@+id/swtRabon"
        android:layout_width="162dp"
        android:layout_height="52dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="36dp"
        android:background="#885686E6"
        android:text="@string/swtabon"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmatricula" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butNsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtRabon"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butNback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:clickable="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtRdisc"
        app:srcCompat="@android:drawable/ic_menu_revert" />
</androidx.constraintlayout.widget.ConstraintLayout>